<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="enabled">Enabled</string>
    <string name="choose_app">Choose application</string>
    <string name="help">Help</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="attention">Attention</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="build_tweaks_summary_title">Shine Like A Star</string>
    <string name="starfield_title">StarField</string>
    <string name="category_statusbar_title">Statusbar</string>
    <string name="category_quicksettings_title">Quick Settings</string>
    <string name="category_misc_title">Miscellaneous</string>
    <string name="category_theme_title">Themes</string>
    <string name="category_notif_title">Notifications</string>
     <string name="category_fonts_title">Fonts</string>
    <string name="general_category">General</string>
    <string name="brightness_category">Brightness</string>
    <string name="security_category">Security</string>
    <string name="headsup_cat">Heads-up</string>
    <string name="privacy_ind">Privacy Indicators</string>
    <string name="ls_category">Lockscreen</string>
    <string name="spoofing_category">Spoofing</string>
    <string name="icons_category">Icons</string>
    <string name="system_category">System</string>
    <string name="battery_category">Battery</string>
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>
    <string name="theme_customization_font_title">Font style</string>
    <string name="theme_customization_font_summary">Set system font style</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="status_bar_quick_pull_down_title">Quick pull down</string>
    <string name="status_bar_quick_pull_down_summary">%1$s of the status bar pulls down quick settings</string>
    <string name="status_bar_quick_pull_down_off">Off</string>
    <string name="status_bar_quick_pull_down_right">Right side</string>
    <string name="status_bar_quick_pull_down_left">Left side</string>
    <string name="status_bar_quick_pull_down_both">Both sides</string>
    <string name="quick_settings_show_brightness_slider_title">Brightness slider</string>
    <string name="quick_settings_show_brightness_slider_never">Never show</string>
    <string name="quick_settings_show_brightness_slider_expanded">Only show when expanded</string>
    <string name="quick_settings_show_brightness_slider_always">Always show</string>
    <string name="quick_settings_brightness_slider_position_title">Brightness slider position</string>
    <string name="quick_settings_brightness_slider_position_top">Top</string>
    <string name="quick_settings_brightness_slider_position_bottom">Bottom</string>
    <string name="quick_settings_auto_brightness_icon_title">Auto brightness icon</string>
    <string name="quick_settings_auto_brightness_icon_summary">Show icon toggle for adaptive brightness next to the slider</string>
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">This removes the screenshots and screenrecords limits for all applications. Normally, special applications are replaced with black areas in records. This can be convenient in some cases but may lead to privacy leaks. After changing this toggle, you may need to restart applications for the change to take effect.</string>
    <string name="mic_camera_privacy_indicator_title">Mic and camera privacy indicator</string>
    <string name="mic_camera_privacy_indicator_summary">Show indicator when any app uses mic or camera</string>
    <string name="location_privacy_indicator_title">Location privacy indicator</string>
    <string name="location_privacy_indicator_summary">Show indicator when any app uses location</string>
    <string name="projection_privacy_indicator_title">Media projection privacy indicator</string>
    <string name="projection_privacy_indicator_summary">Show indicator when device screen is projected</string>
    <string name="qs_show_data_usage_title">Show data usage</string>
    <string name="qs_show_data_usage_summary">Show daily cellular/Wi-Fi data usage in QS footer</string>
   <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
   <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="spoof_storage_encryption_status_title">Use storage encryption spoofing</string>
    <string name="spoof_storage_encryption_status_summary">Spoof storage encryption status to encrypted.</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="wifi_standard_icon_title">WiFi standard</string>
    <string name="wifi_standard_icon_summary">Display WiFi standard next to WiFi signal</string>
    <string name="media_controls_always_show_time_title">Media show time</string>
    <string name="media_controls_always_show_time_summary">Always show passed and total time on media player</string>
    <string name="idle_manager_title">Kill background processes</string>
    <string name="idle_manager_summary">Stop all non-essential background processes when the device is idle</string>
    <string name="show_clipboard_overlay_title">Show clipboard overlay</string>
    <string name="show_clipboard_overlay_summary">Show an overlay in the left bottom corner of the screen when something is copied to the clipboard</string>
    <string name="enable">Enable</string>
    <string name="accent_color">Accent color (Default)</string>
    <string name="notification_color">Notification color</string>
    <string name="wallpaper_color">Wallpaper color</string>
    <string name="custom_color">Custom color</string>
    <string name="edge_light_title">Edge light</string>
    <string name="edge_light_summary">Light up the side edges of the screen on notification pulse</string>
    <string name="edge_light_always_trigger_on_pulse_title">Always trigger on pulse</string>
    <string name="edge_light_always_trigger_on_pulse_summary">Whether to show edge light whenever ambient display is shown and not just for notifications</string>
    <string name="edge_light_repeat_animation_title">Repeat animation</string>
    <string name="edge_light_repeat_animation_summary_on">Repeat until timeout</string>
    <string name="edge_light_repeat_animation_summary_off">Show only once</string>
    <string name="edge_light_color_mode_title">Edge light color mode</string>
    <string name="miscellaneous_unlimit_screenrecord_title">Unlimit screenrecord</string>
    <string name="miscellaneous_unlimit_screenrecord_summary">Remove the 15GiB file size limit\nMay result in a larger than needed output file</string>
    <string name="miscellaneous_block_wallpaper_dimming_title">Ignore wallpaper dimming requests</string>
    <string name="miscellaneous_block_wallpaper_dimming_summary">Blocks all apps from setting the wallpaper dim\nForces dim to 0</string>
     <string name="pulse_on_new_tracks_title">Music ticker</string>
     <string name="pulse_on_new_tracks_summary">Show music ticker on Ambient Display during track change</string>
    <string name="statusbar_colored_icons_title">Colored icons</string>
    <string name="statusbar_colored_icons_summary">Use proper app icons for notification icons in statusbar</string>
    <string name="status_bar_notif_count_title">Notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="unit_percent" translatable="false">\u0025</string>
    <string name="unit_x1000ms" translatable="false">x1000 ms</string>
    <string name="unit_seconds">seconds</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_pixels">dp</string>
    <string name="pulse_help_policy_notice_title">About Pulse</string>
    <string name="pulse_help_policy_notice_summary">Pulse is a brilliant audio visualizer when music plays on the device</string>
    <string name="pulse_settings">Pulse</string>
    <string name="pulse_settings_summary">Audio visualizer for navigation bar, lockscreen and ambient screen</string>
    <string name="show_navbar_pulse_title">Navbar Pulse</string>
    <string name="show_navbar_pulse_summary">Audio visualizer on the navigation bar</string>
    <string name="show_lockscreen_pulse_title">Lockscreen Pulse</string>
    <string name="show_lockscreen_pulse_summary">Audio visualizer on the lockscreen</string>
    <string name="show_ambient_pulse_title">Ambient Pulse</string>
    <string name="show_ambient_pulse_summary">Audio visualizer on the ambient screen</string>
    <string name="pulse_render_mode_title">Render mode</string>
    <string name="pulse_render_mode_fading_bars">Fading blocks</string>
    <string name="pulse_render_mode_solid_lines">Solid lines</string>
    <string name="pulse_legacy_mode_advanced_category">Fading blocks mode settings</string>
    <string name="pulse_custom_fudge_factor">Sanity level</string>
    <string name="pulse_lavalamp_speed_title">Lava lamp speed</string>
    <string name="pulse_solid_units_count">Solid lines count</string>
    <string name="pulse_solid_units_opacity">Solid lines opacity</string>
    <string name="pulse_solid_dimen_category">Solid lines mode settings</string>
    <string name="pulse_color_mode_title">Color</string>
    <string name="pulse_color_accent">Accent</string>
    <string name="pulse_color_custom">Custom</string>
    <string name="pulse_color_lava_lamp">Lava lamp</string>
    <string name="pulse_color_user_title">Choose color</string>
    <string name="pulse_color_auto">Album</string>
    <string name="pulse_smoothing_enabled_title">Turn on smoothing</string>
    <string name="pulse_smoothing_enabled_summary">Each bar is animated more smoothly</string>
    <string name="pulse_custom_dimen">Bar width</string>
    <string name="pulse_custom_div">Bar spacing</string>
    <string name="pulse_filled_block_size">Block size</string>
    <string name="pulse_empty_block_size">Block spacing</string>
    <string name="pulse_solid_units_rounded_title">Solid lines rounded</string>
    <string name="pulse_solid_units_rounded_summary">Round the solid lines</string>
    <string name="pulse_custom_gravity_title">Gravity</string>
    <string name="pulse_custom_gravity_bottom">Bottom</string>
    <string name="pulse_custom_gravity_top">Top</string>
    <string name="pulse_custom_gravity_center">Center</string>
    <string name="theming_category">Theming settings</string>
    <string name="monet_engine_title">Monet engine</string>
    <string name="monet_engine_summary">Customize monet parameters</string>
    <string name="qs_split_shade_title">Split Shade</string>
    <string name="qs_split_shade_summary">Split QS layout in landscape mode</string>
</resources>