<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 Project-Awaken
     Copyright (C) 2021 CrystalOS-Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/category_misc_title" >

    <PreferenceCategory
        android:key="incall_vib_options"
        android:title="@string/incall_vibration_category" >

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_connect"
            android:title="@string/incall_vibrate_connect_title"
            android:defaultValue="false" />

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_callwaiting"
            android:title="@string/incall_vibrate_call_wait_title"
            android:defaultValue="false" />

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_disconnect"
            android:title="@string/incall_vibrate_disconnect_title"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
	   android:title="@string/system_category" >

          <com.android.settings.custom.preference.SecureSettingSwitchPreference
               android:key="show_clipboard_overlay"
               android:title="@string/show_clipboard_overlay_title"
               android:summary="@string/show_clipboard_overlay_summary"
               android:defaultValue="true"/>

          <com.android.settings.custom.preference.SystemSettingSwitchPreference
		    android:key="arcane_idle_manager"
		    android:title="@string/idle_manager_title"
		    android:summary="@string/idle_manager_summary"
		    android:defaultValue="false" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="security_category"
	   android:title="@string/security_category" >

          <com.android.settings.custom.preference.GlobalSettingSwitchPreference
               android:key="window_ignore_secure"
               android:title="@string/ignore_window_secure_title"
               android:summary="@string/ignore_window_secure_summary"
               android:defaultValue="false"/>

    </PreferenceCategory>
    
    <PreferenceCategory
	   android:title="@string/spoofing_category" >

          <com.android.settings.custom.preference.SecureSettingSwitchPreference
               android:key="spoof_storage_encryption_status"
               android:title="@string/spoof_storage_encryption_status_title"
               android:summary="@string/spoof_storage_encryption_status_summary"
               android:defaultValue="false"/>

    </PreferenceCategory>     
</PreferenceScreen>