<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 Project-Awaken
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/category_statusbar_title" >

    <PreferenceCategory
        android:title="@string/icons_category" >

            <com.android.settings.custom.preference.SystemSettingSwitchPreference
                android:key="show_fourg_icon"
                android:title="@string/show_fourg_icon_title"
                android:summary="@string/show_fourg_icon_summary"
                android:defaultValue="false"/>
                
            <com.android.settings.custom.preference.SystemSettingSwitchPreference
                android:key="data_disabled_icon"
                android:title="@string/data_disabled_icon_title"
                android:summary="@string/data_disabled_icon_summary"
                android:defaultValue="true"/>
                
    </PreferenceCategory>

    <PreferenceCategory
        android:key="prirvacy"
        android:title="@string/privacy_ind" >

          <com.android.settings.custom.preference.SecureSettingSwitchPreference
               android:key="enable_camera_privacy_indicator"
               android:title="@string/mic_camera_privacy_indicator_title"
               android:summary="@string/mic_camera_privacy_indicator_summary"
               android:defaultValue="true" />

          <com.android.settings.custom.preference.SecureSettingSwitchPreference
               android:key="enable_location_privacy_indicator"
               android:title="@string/location_privacy_indicator_title"
               android:summary="@string/location_privacy_indicator_summary"
               android:defaultValue="true" />

          <com.android.settings.custom.preference.SecureSettingSwitchPreference
               android:key="enable_projection_privacy_indicator"
               android:title="@string/projection_privacy_indicator_title"
               android:summary="@string/projection_privacy_indicator_summary"
               android:defaultValue="true" />

    </PreferenceCategory>
    
</PreferenceScreen>