<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 Project-Awaken
     Copyright (C) 2021 CrystalOS-Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/category_notif_title" >

    <PreferenceCategory
        android:title="@string/general_category">

          <com.android.settings.custom.preference.SecureSettingSwitchPreference
               android:key="media_controls_always_show_time"
               android:title="@string/media_controls_always_show_time_title"
               android:summary="@string/media_controls_always_show_time_summary"
               android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/ls_category">

          <com.android.settings.custom.preference.SystemSettingSwitchPreference
               android:key="lockscreen_battery_info"
               android:title="@string/lockscreen_battery_info_title"
               android:summary="@string/lockscreen_battery_info_summary"
               android:defaultValue="true" />
     
          <com.android.settings.custom.preference.SecureSettingSwitchPreference
               android:key="pulse_on_new_tracks"
               android:title="@string/pulse_on_new_tracks_title"
               android:summary="@string/pulse_on_new_tracks_summary"
               android:defaultValue="false" />

          <Preference
               android:key="edge_light_settings"
               android:title="@string/edge_light_title"
               android:summary="@string/edge_light_summary"
               android:fragment="com.star.field.fragments.EdgeLightSettings"/>
               
    </PreferenceCategory>

</PreferenceScreen>