<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 Project-Awaken
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/category_theme_title" >

    <PreferenceCategory
    android:title="@string/icons_category">
        <Preference
            android:key="android.theme.customization.icon_pack"
            android:title="@string/theme_customization_icon_pack_title"
            android:summary="@string/theme_customization_icon_pack_summary"
            android:fragment="com.star.field.fragments.StatusbarIcons"/>

        <Preference
            android:key="android.theme.customization.adaptive_icon_shape"
            android:title="@string/theme_customization_icon_shape_title"
            android:summary="@string/theme_customization_icon_shape_summary"
            android:fragment="com.star.field.fragments.IconShapes"/>    

    </PreferenceCategory>

    <PreferenceCategory
    android:title="@string/theming_category">

        <!-- Monet settings -->
        <Preference
            android:key="monet_engine"
            android:title="@string/monet_engine_title"
            android:summary="@string/monet_engine_summary"
            android:fragment="com.star.field.fragments.MonetEngine" />

    </PreferenceCategory>

</PreferenceScreen>