<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 Project-Awaken
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/category_quicksettings_title" >

    <PreferenceCategory
        android:key="general_category"
	   android:title="@string/general_category" >
          <com.android.settings.custom.preference.SystemSettingSwitchPreference
               android:key="qs_show_data_usage"
               android:title="@string/qs_show_data_usage_title"
               android:summary="@string/qs_show_data_usage_summary"
               android:defaultValue="true" />

          <!-- Quick pull down -->
          <lineageos.preference.LineageSystemSettingListPreference
               android:key="qs_quick_pulldown"
               android:title="@string/status_bar_quick_pull_down_title"
               android:entries="@array/status_bar_quick_pull_down_entries"
               android:entryValues="@array/status_bar_quick_pull_down_values"
               android:defaultValue="0" />

        <SwitchPreferenceCompat
            android:key="qs_split_shade"
            android:title="@string/qs_split_shade_title"
            android:summary="@string/qs_split_shade_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="brightness_category"
	   android:title="@string/brightness_category" >
        <!-- Brightness slider -->
        <lineageos.preference.LineageSecureSettingListPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/quick_settings_show_brightness_slider_title"
            android:entries="@array/quick_settings_show_brightness_slider_entries"
            android:entryValues="@array/quick_settings_show_brightness_slider_values"
            android:defaultValue="1" />

        <!-- Brightness slider position -->
        <lineageos.preference.LineageSecureSettingListPreference
            android:key="qs_brightness_slider_position"
            android:title="@string/quick_settings_brightness_slider_position_title"
            android:entries="@array/quick_settings_brightness_slider_position_entries"
            android:entryValues="@array/quick_settings_brightness_slider_position_values"
            android:defaultValue="0" />

        <!-- Auto brightness icon -->
        <lineageos.preference.LineageSecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/quick_settings_auto_brightness_icon_title"
            android:summary="@string/quick_settings_auto_brightness_icon_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>